[fix/ADP-139] 허용 오리진 목록을 .env로 설정하도록 수정 (#45)